b2g/app/B2GLoader.cpp
@@ -138,7 +138,7 @@ GetAppIni(int argc, const char *argv[])
 
     char appEnv[MAXPATHLEN];
     snprintf(appEnv, MAXPATHLEN, "XUL_APP_FILE=%s", argv[2]);
-    if (putenv(appEnv)) {
+    if (putenv(strdup(appEnv))) {
       return nullptr;
     }
   }
